# GraphPalace

./: .gitignore  README.md  graphpalace.toml
.github/workflows/: graphpalace-ci.yml
docs/: agents.md  architecture.md  benchmarks.md  mcp-tools.md  palace-schema.md  palace.md  pathfinding.md  skills-protocol.md  stigmergy.md  storage.md
examples/graphpalace/: agent_swarm.rs  basic_palace.rs  benchmark_run.rs  full_lifecycle.rs  pheromone_navigation.rs
paper/: .gitignore  Makefile  graphpalace-paper.tex
rust/: Cargo.toml
rust/gp-agents/: Cargo.toml
rust/gp-agents/src/: action_selection.rs  active_inference.rs  archetypes.rs  beliefs.rs  generative_model.rs  lib.rs
rust/gp-bench/: Cargo.toml
rust/gp-bench/benches/: palace_benchmarks.rs
rust/gp-bench/src/: comparison.rs  generators.rs  lib.rs  pathfinding.rs  recall.rs  throughput.rs
rust/gp-cli/: Cargo.toml
rust/gp-cli/src/: main.rs
rust/gp-cli/tests/: cli_integration.rs
rust/gp-core/: Cargo.toml
rust/gp-core/src/: config.rs  error.rs  lib.rs  schema.rs  types.rs
rust/gp-embeddings/: Cargo.toml
rust/gp-embeddings/src/: cache.rs  download.rs  engine.rs  lib.rs  onnx.rs  similarity.rs  tfidf.rs
rust/gp-embeddings/tests/: onnx_integration.rs
rust/gp-mcp/: Cargo.toml
rust/gp-mcp/src/: lib.rs  palace_protocol.rs  protocol.rs  server.rs  tools.rs
rust/gp-palace/: Cargo.toml
rust/gp-palace/src/: export.rs  lib.rs  lifecycle.rs  palace.rs  search.rs
rust/gp-palace/tests/: butters_integration.rs
rust/gp-pathfinding/: Cargo.toml
rust/gp-pathfinding/src/: astar.rs  bench.rs  edge_cost.rs  heuristic.rs  lib.rs  provenance.rs
rust/gp-pathfinding/tests/: integration.rs
rust/gp-python/: Cargo.toml  pyproject.toml
rust/gp-python/src/: lib.rs
rust/gp-stigmergy/: Cargo.toml
rust/gp-stigmergy/src/: cost.rs  cypher.rs  decay.rs  lib.rs  pheromones.rs  rewards.rs
rust/gp-stigmergy/tests/: integration.rs
rust/gp-storage/: Cargo.toml
rust/gp-storage/src/: backend.rs  ffi.rs  hnsw.rs  lib.rs  memory.rs  palace_backend.rs  palace_ops.rs  safe.rs  schema_init.rs
rust/gp-swarm/: Cargo.toml
rust/gp-swarm/src/: convergence.rs  coordinator.rs  decay_scheduler.rs  interest.rs  lib.rs
rust/gp-wasm/: Cargo.toml  package.json
rust/gp-wasm/src/: js_api.rs  lib.rs  palace.rs  persistence.rs  worker.rs
skills/: graphpalace.md
