[workspace]
members = [
    "gp-core",
    "gp-stigmergy",
    "gp-pathfinding",
    "gp-agents",
    "gp-embeddings",
    "gp-mcp",
    "gp-wasm",
    "gp-swarm",
    "gp-storage",
    "gp-palace",
    "gp-bench",
    "gp-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/web3guru888/GraphPalace"

[workspace.dependencies]
# Rust core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-big-array = "0.5"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"

# Graph algorithms
ordered-float = { version = "4", features = ["serde"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Internal crates
gp-core = { path = "gp-core" }
gp-stigmergy = { path = "gp-stigmergy" }
gp-pathfinding = { path = "gp-pathfinding" }
gp-agents = { path = "gp-agents" }
gp-embeddings = { path = "gp-embeddings" }
gp-mcp = { path = "gp-mcp" }
gp-swarm = { path = "gp-swarm" }
gp-storage = { path = "gp-storage" }
gp-palace = { path = "gp-palace" }

[profile.release]
opt-level = 3
lto = "thin"
