[package]
name = "gp-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent framework: ant-like agents that traverse, deposit pheromones, and learn"

[dependencies]
gp-core = { workspace = true }
gp-embeddings = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
