[package]
name = "gp-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Comprehensive benchmark suite for GraphPalace"

[dependencies]
gp-core = { workspace = true }
gp-palace = { workspace = true }
gp-storage = { workspace = true }
gp-pathfinding = { workspace = true }
gp-stigmergy = { workspace = true }
gp-embeddings = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "palace_benchmarks"
harness = false
