[package]
name = "gp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GraphPalace CLI — manage and navigate memory palaces from the command line"

[[bin]]
name = "graphpalace"
path = "src/main.rs"

[features]
default = ["tfidf"]
tfidf = ["gp-embeddings/tfidf"]
onnx = ["gp-embeddings/onnx"]
download = ["gp-embeddings/download", "onnx"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
gp-core = { path = "../gp-core" }
gp-stigmergy = { path = "../gp-stigmergy" }
gp-pathfinding = { path = "../gp-pathfinding" }
gp-agents = { path = "../gp-agents" }
gp-embeddings = { path = "../gp-embeddings" }
gp-mcp = { path = "../gp-mcp" }
gp-palace = { path = "../gp-palace" }
gp-storage = { path = "../gp-storage" }
gp-swarm = { path = "../gp-swarm" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
toml = "0.8"
rand = { workspace = true }
