[package]
name = "gp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GraphPalace CLI — manage and navigate memory palaces from the command line"

[[bin]]
name = "graphpalace"
path = "src/main.rs"

[dependencies]
gp-core = { workspace = true }
gp-palace = { workspace = true }
gp-storage = { workspace = true }
gp-embeddings = { workspace = true, features = ["tfidf"] }
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
