[package]
name = "gp-pathfinding"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pheromone-weighted pathfinding: A*, Dijkstra, ant-colony-inspired traversal"

[dependencies]
gp-core = { workspace = true }
gp-embeddings = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ordered-float = { workspace = true }

[dev-dependencies]
