[package]
name = "gp-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GraphPalace Python bindings via PyO3"

[lib]
name = "graphpalace"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
gp-core = { path = "../gp-core" }
gp-stigmergy = { path = "../gp-stigmergy" }
gp-pathfinding = { path = "../gp-pathfinding" }
gp-agents = { path = "../gp-agents" }
gp-embeddings = { path = "../gp-embeddings" }
gp-mcp = { path = "../gp-mcp" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
