[package]
name = "gp-python"
version.workspace = true
# PyO3 0.22 generates code that triggers `unsafe_op_in_unsafe_fn` warnings
# in edition 2024; keep this crate on 2021 until PyO3 0.23+ ships.
edition = "2021"
license.workspace = true
repository.workspace = true
description = "GraphPalace Python bindings via PyO3"

[lib]
name = "graphpalace"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
gp-core = { path = "../gp-core" }
gp-palace = { path = "../gp-palace" }
gp-storage = { path = "../gp-storage" }
gp-embeddings = { path = "../gp-embeddings", features = ["tfidf"] }
gp-pathfinding = { path = "../gp-pathfinding" }
serde.workspace = true
serde_json.workspace = true
chrono = { workspace = true }
