[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "graphpalace"
version = "0.1.0"
description = "Stigmergic Memory Palace Engine — Python bindings"
readme = "../../README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["memory", "palace", "graph", "ai", "stigmergy", "knowledge-graph"]

[project.urls]
Homepage = "https://github.com/web3guru888/GraphPalace"
Repository = "https://github.com/web3guru888/GraphPalace"
Documentation = "https://github.com/web3guru888/GraphPalace/tree/main/docs"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "graphpalace"
manifest-path = "Cargo.toml"
