[package]
name = "gp-stigmergy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stigmergic pheromone dynamics: deposit, evaporate, diffuse, and query pheromone fields"

[dependencies]
gp-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
