[package]
name = "gp-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage backend for GraphPalace: safe Kuzu FFI wrapper and in-memory backend"

[features]
default = []
kuzu-ffi = ["libc"]

[dependencies]
gp-core = { workspace = true }
gp-stigmergy = { workspace = true }
gp-embeddings = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Optional: only needed for Kuzu FFI
libc = { version = "0.2", optional = true }

[dev-dependencies]
