[package]
name = "gp-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for GraphPalace core types and graph operations"

[dependencies]
gp-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
